--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,8 @@
     "php": "^7.3",
     "acquia/acquia_cms": "^1.0",
     "acquia/blt": "^13.0",
+    "acquia/blt-phpcs": "^1.0",
+    "acquia/blt-travis": "^1.0",
     "acquia/drupal-environment-detector": "^1",
     "acquia/memcache-settings": "^1",
     "cweagans/composer-patches": "^1.6.0",
